# butiaros

./: CMakeLists.txt  README  manifest.xml  manifest.xml~  package.xml  setup.py
scripts/: add_two_ints_client.py~  add_two_ints_server.py~  butia_get_gray_client.py~  butia_get_gray_server.py~  butia_ros_client.py  butia_ros_client.py~  butia_ros_server.py  butia_ros_server.py~  butia_ros_server_topcis.py~  butia_ros_server_topics.py  butia_ros_server_topics.py~  listener.py~  talker.py~
scripts/pybot/: __init__.py  com_chotox.py  com_usb.py  com_usb.py~  functions.py  pybot_client.py  pybot_server.py
src/Butia/srv/: _ButiaGetDistance.py  _ButiaGetGray.py
src/butiaros/srv/: _ButiaGetButton.py  _ButiaSet2MotorSpeed.py  __init__.py
srv/: ButiaGetDistance.srv  ButiaSet2MotorSpeed.srv~
srv_gen/cpp/include/Butia/: ButiaGetButton.h  ButiaGetDistance.h  ButiaGetGray.h  ButiaSet2MotorSpeed.h
srv_gen/lisp/: Butia-srv.asd  ButiaGetButton.lisp  ButiaGetDistance.lisp  ButiaGetGray.lisp  ButiaSet2MotorSpeed.lisp  _package.lisp  _package_ButiaGetDistance.lisp  _package_ButiaSet2MotorSpeed.lisp
